# fAPI

./: .gitignore  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/auth/: crud.py  helpers.py  jwt_auth.py  jwt_auth_views.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
certs/: jwt-public.pem
core/: config.py
core/models/: __init__.py  base.py  brand.py  category.py  engine.py  options.py  product.py
users/: crud.py  schemas.py  views.py
