[tool.poetry]
name = "fapi"
version = "0.1.0"
description = ""
authors = ["EgorovAleksei <plyuh@list.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.5"
unicorn = {extras = ["standard"], version = "^2.1.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
