[tool.poetry]
name = "fapi"
version = "0.1.0"
description = ""
authors = ["EgorovAleksei <plyuh@list.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
pydantic = { extras = ["email"], version = "^2.10.3" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
pydantic-settings = "^2.6.1"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
python-multipart = "^0.0.20"
orjson = "^3.10.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
